feat: 이미지 역할지 뷰어 추가
